# slorado

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  LICENSE  Makefile  README.md  out_gpu.fastq  reads_2k.blow5.idx
.github/workflows/: c-cpp.yml  cuda.yml
build2/: Makefile  cmake_install.cmake
build2/slow5lib/: Makefile  cmake_install.cmake
docs/: cpu-build.md  cuda-bin.md  cuda-build.md  jetson-build.md  pawsey.md  rocm-bin.md  rocm-build.md  rocm.md  troubleshoot.md
docs/dev/: blog.md
dorado_out/: one_read.fastq
models/dna_r9.4.1_e8.1_fast@v3.4/: 0.conv.bias.tensor  0.conv.weight.tensor  1.conv.bias.tensor  1.conv.weight.tensor  2.conv.bias.tensor  2.conv.weight.tensor  4.rnn.bias_hh_l0.tensor  4.rnn.bias_ih_l0.tensor  4.rnn.weight_hh_l0.tensor  4.rnn.weight_ih_l0.tensor  5.rnn.bias_hh_l0.tensor  5.rnn.bias_ih_l0.tensor  5.rnn.weight_hh_l0.tensor  5.rnn.weight_ih_l0.tensor  6.rnn.bias_hh_l0.tensor  6.rnn.bias_ih_l0.tensor  6.rnn.weight_hh_l0.tensor  6.rnn.weight_ih_l0.tensor  7.rnn.bias_hh_l0.tensor  7.rnn.bias_ih_l0.tensor  7.rnn.weight_hh_l0.tensor  7.rnn.weight_ih_l0.tensor  8.rnn.bias_hh_l0.tensor  8.rnn.bias_ih_l0.tensor  8.rnn.weight_hh_l0.tensor  8.rnn.weight_ih_l0.tensor  9.linear.bias.tensor  9.linear.weight.tensor  config.toml
scripts/: LICENCE  amd_run.sh  amd_run_mi210.sh  benchmark.sh  calculate_basecalling_accuracy.sh  download-models.sh  get_qstring_score.awk  gtgpu_run.sh  identityrna.sh  install-koi.sh  install-toml11.sh  install-torch10.sh  install-torch12.sh  install-torch2.sh  make.sh  qscore_compare.sh  run.sh  run_dorados.sh  test_new_run.sh  test_run.sh
src/: Chunk.h  basecall.cpp  basecall.h  basecaller_main.c  basecaller_main.cpp  buffers.h  cuda_utils.h  elephant.cpp  elephant.h  error.c  error.cpp  error.h  globals.cpp  globals.h  half.h  hip_utils.h  inference.cpp  inference.h  logger.h  main.c  main.cpp  misc.c  misc.cpp  misc.h  signal_prep.cpp  signal_prep.h  slorado.c  slorado.cpp  slorado.h  subtool1_main.c  thread.c  thread.cpp  timestamps.h  torchbox.cpp  torchbox.h  writer.cpp  writer.h  xyztool.c  xyztool.h
src/decode/: CPUDecoder.cpp  CPUDecoder.h  Decoder.h  GPUDecoder.cpp  GPUDecoder.h  GPUDecoderLegacy.cpp  beam_search.cpp
src/dorado/: signal_prep.cpp
src/dorado/decode/: CPUDecoder.cpp  CPUDecoder.h  GPUDecoder.cpp
src/dorado/nn/: CRFModel.cpp  CudaCRFModel.cpp
src/dorado/utils/: stitch.cpp
src/nn/: CRFModel.cpp  CRFModel.h  CudaCRFModel.cpp  CudaCRFModel.h  ModelRunner.h
src/utils/: cuda_utils.cpp  cuda_utils.h  module_utils.h  stitch.cpp  stitch.h  tensor_utils.cpp  tensor_utils.h
test/: amd_run_mi210.sh  chr3_34011000_34012000.fa  chr4_90700000_90900000.fa  cuda_workflow_make.sh  example.blow5.idx  extensive.sh  extensive_410.sh  extensive_420.sh  gta100_run.sh  gtgpu_run.sh  one_5khz.blow5  oneread_r10.blow5  package-cuda.sh  package-rocm.sh  package.sh  reads_decode_old_1.fastq  reads_koi_1.fastq  test.sh  test_extensive.sh  valgrind.supp
test/4khz_r10/: 10_reads.blow5  one_read.fast5
test/5khz_r10/: one_5khz.blow5
test/docker/rocm/: Dockerfile
test/dorado_out/: short.fastq  two_reads.fastq
test/pod5_dir/: oneread_r10.fast5
test/r9/: one_read_r9.slow5  two_reads_r9.slow5
